--- a/src/views/emails/npsMail.hbs
+++ b/src/views/emails/npsMail.hbs
@@ -9,6 +9,7 @@
   }
 
   .value {
+    margin: 5px;
     padding: 10px;
     background: #8257e6;
     color: white;
@@ -30,14 +31,13 @@
     display: flex;
     justify-content: space-between;
   }
-
 </style>
 
 <div class="container">
   <label>Olá <strong>{{name}}</strong>! Tudo bem?</label>
 
   <h3>{{title}}</h3>
-  <br/>
+  <br />
   <strong>{{description}}</strong>
 
   <div class="level">
@@ -45,21 +45,19 @@
     <span>Muito provável</span>
   </div>
 
-  <div class="answers">"value"
-    <a class="value" href="">1</a class="value">
-    <a class="value" href="">2</a class="value">
-    <a class="value" href="">3</a class="value">
-    <a class="value" href="">4</a class="value">
-    <a class="value" href="">5</a class="value">
-    <a class="value" href="">6</a class="value">
-    <a class="value" href="">7</a class="value">
-    <a class="value" href="">8</a class="value">
-    <a class="value" href="">9</a class=>
-    <a class= href="">10</a>
+  <div class="answers">
+    <a class="value" href="{{link}}/1?u={{user_id}}">1</a>
+    <a class="value" href="{{link}}/2?u={{user_id}}">2</a>
+    <a class="value" href="{{link}}/3?u={{user_id}}">3</a>
+    <a class="value" href="{{link}}/4?u={{user_id}}">4</a>
+    <a class="value" href="{{link}}/5?u={{user_id}}">5</a>
+    <a class="value" href="{{link}}/6?u={{user_id}}">6</a>
+    <a class="value" href="{{link}}/7?u={{user_id}}">7</a>
+    <a class="value" href="{{link}}/8?u={{user_id}}">8</a>
+    <a class="value" href="{{link}}/9?u={{user_id}}">9</a>
+    <a class="value" href="{{link}}/10?u={{user_id}}">10</a>
   </div>
 
-  <br/><br/>
-
-  
+  <br /><br />
 
 </div>
